# TopoMesh

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  queries.txt
TriCalc/: CMakeLists.txt  TriCalc.h  TriCalc.mm  main.mm
headers/: Mesh.hpp  TopoTri.hpp
sources/: TopoTri.cpp
test/: CMakeLists.txt  TopoMeshTest.cpp
